[package]
name = "tig-driver"
version = "0.1.0"
edition = "2021"
authors = ["Erick Hernandez Curiel <erick@hernandezcuriel.dev>"]

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "3", features = ["derive"] }
tig-common = { path = "../tig-common" }
tig-error = { path = "../tig-error" }
tig-compiler = { path = "../tig-compiler" }
tig-syntax = { path = "../tig-syntax" }
tig-semant = { path = "../tig-semant" }
tig-arch = { path = "../tig-arch" }
