[package]
name = "tig_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tig_common = { path = "../tig_common" }
tig_lexer = { path = "../tig_lexer" }
tig_ast = { path = "../tig_ast" }
tig_error = { path = "../tig_error" }
